tmux: document `prefix C-x`

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,7 +17,7 @@ bind-key -N 'Send M-Z'           M-Z   send-keys M-Z
 
 # fish_clipboard_copy exits with non-0 error code in weird cases
 # and doesn't exit with an error code when it should
-bind-key C-x run-shell -b 'fish -c "tmux show-buffer &| fish_clipboard_copy || true"'
+bind-key -N 'Pass tmux buffer to `fish_clipboard_copy`' C-x run-shell -b 'fish -c "tmux show-buffer &| fish_clipboard_copy || true"'
 
 # Ms modifies OSC 52 clipboard handling to work with mosh, see
 # https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
