--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,6 +21,9 @@ disable_ligatures always
 # kitty_mod ctrl+shift+alt
 map ctrl+shift+v  paste_from_clipboard
 # map ctrl+shift+c copy_to_clipboard
+
+# Mirror Alacritty config
+map ctrl+shift+alt+f  toggle_fullscreen
 copy_on_select clipboard
 strip_trailing_spaces smart
 
