--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -55,6 +55,8 @@ tab_bar_edge top
 # it back to `auto` when that's fixed.
 linux_display_server x11
 wayland_titlebar_color background
+# both, left, or right
+macos_option_as_alt both
 
 # If I wanted to have ligatures, here are the ones I'd
 # want to disable.
