--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -158,7 +158,9 @@ log="openlog"
 
 [template-aliases]
 "format_short_id(id)" = "id.shortest(6)"
-'format_short_change_id(id)' = 'format_short_id(id).upper()'
+# # `format_short_change_id` is disabled since lowercase ids
+# # seem more readable after all.
+# 'format_short_change_id(id)' = 'format_short_id(id)'
 "format_timestamp(timestamp)" = "timestamp.ago()"
 "format_short_signature(signature)" = 'label("email", signature.username() ++ "@")'
 commit_summary_separator = 'label("separator", "| ")'
