kitty.conf: document another way to get default config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 # Defaults:
+# $ kitty +runpy 'from kitty.config import *; print(commented_out_default_config())'
+# Or in files:
 # /usr/share/doc/kitty/examples/kitty.conf
 # ~/.local/share/doc/kitty/html/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
 # https://sw.kovidgoyal.net/kitty/conf/
