fish jj prompt: more complicated

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -282,20 +282,23 @@ op_log_node = 'builtin_op_log_node'
 "format_short_signature(signature)" = 'label("email", signature.username() ++ "@")'
 commit_summary_separator = 'label("separator", "| ")'
 description_placeholder = 'label(separate(" ", if(empty, "empty"), "description placeholder"), "(no description set)")'
-shell_prompt_id = '''
+"shell_prompt_id(diff_stats)" = '''
 label("shell_prompt " ++ if(current_working_copy, "working_copy"),
 concat(
   label("separator", "<"),
   separate(label("separator", "|"),
     concat(
-        if(divergent,
-          label("divergent", "⌥") ++ commit_id.shortest(),
-          change_id.shortest()
-        ),
+      label(if(divergent, "divergent"),
+        change_id.shortest()
+      ),
+      if(divergent,
+         label("divergent", "⌥") ++ commit_id.shortest(),
+      ),
     ),
     concat(
         if(conflict, label("conflict", "⇋")),
         if(empty, label("empty", "∅")),
+        diff_stats
     ),
     branches,
     tags,
@@ -307,6 +310,7 @@ concat(
 
 [colors]
 "shell_prompt branches" = "blue" # "default"
+"shell_prompt working_copy branches" = "bright blue" # "default"
 # "description placeholder" =  "yellow" # "blue"
 # "empty description placeholder" = "green"
 #
