--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -59,6 +59,7 @@ linux_display_server x11
 wayland_titlebar_color background
 # both, left, or right
 macos_option_as_alt both
+macos_quit_when_last_window_closed yes
 # Do not ask for confirmation on close
 confirm_os_window_close 0
 
