Nix: use many threads

--- a/.config/nix/nix.conf
+++ b/.config/nix/nix.conf
@@ -3,3 +3,5 @@ extra-experimental-features = nix-command flakes
 # with nix-your-shell & fish
 # TODO: Replace with proper prompt hook
 bash-prompt-prefix = ❄
+max-jobs = auto
+# sandbox = true  # nixpkgs require this
