tmux: bugfix for incsearch + OSC 133
go to next/prev prompt in copy mode with []

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -79,7 +79,12 @@ bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded
 
 # Make search incremental, copied form Emacs-mode bindings
 bind-key    -T copy-mode-vi ?  command-prompt -i -I "#{pane_search_string}" -T search -p "(search up)" { send-keys -X search-backward-incremental "%%" }
-bind-key    -T copy-mode-vi /  command-prompt -i -I "#{pane_search_string}" -T search -p "(search up)" { send-keys -X search-forward-incremental "%%" }
+bind-key    -T copy-mode-vi /  command-prompt -i -I "#{pane_search_string}" -T search -p "(search down)" { send-keys -X search-forward-incremental "%%" }
+
+bind-key -T copy-mode-vi [ send-keys -X previous-prompt
+bind-key -T copy-mode-vi M-[ send-keys -X previous-prompt -o
+bind-key -T copy-mode-vi ] send-keys -X next-prompt
+bind-key -T copy-mode-vi M-] send-keys -X next-prompt -o
 
 
 bind-key -n DoubleClick3Pane select-pane\; resize-pane -Z
