tmux: increase history limit 2000 -> 50000

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,7 @@ set -g set-clipboard on
 set -g focus-events on
 set -g mode-keys vi
 set -g status-keys vi
+set -g history-limit 50000
 
 set-option -g prefix C-z
 bind-key C-z send-prefix
