--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,9 +10,16 @@
 # man 5 kitty.conf
 
 # DejaVu Sans Mono
-font_family Fira Code Medium
-bold_font Fira Code Bold
+# Menlo
+
+
+# Might need Fira Code Regular on Linux
+font_family Fira Code
+# bold_font Fira Code Bold
 font_size 14
+
+# https://github.com/kovidgoyal/kitty/issues/7525
+symbol_map U+2010-U+2011 Monospace
 
 # cursor, never, always
 disable_ligatures always
@@ -32,7 +39,8 @@ strip_trailing_spaces smart
 # This defaults to shift+click. I seem to prefer ctrl.
 # Kitty 0.21.2 (Debian bookworm?) uses the following.
 # Kitty 0.25 can use a slightly more advanced version
-mouse_map ctrl+left      click grabbed,ungrabbed mouse_click_url_or_select
+mouse_map ctrl+left click grabbed,ungrabbed mouse_click_url_or_select
+mouse_map cmd+left  click grabbed,ungrabbed mouse_click_url_or_select
 # For older kitty ~0.19
 # open_url_modifiers ctrl
 
