--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,7 +10,7 @@ set-option -g prefix C-z
 bind-key C-z send-prefix
 bind-key C-b suspend-client # Formerly C-z
 
-bind-key -n C-b send-keys C-b \; display-message "Prefix changed to C-z." 
+bind-key -n C-b send-keys C-b \; display-message -d 100 "Prefix changed to C-z." 
 # bind-key -N 'Enter copy mode' -n M-C-Z copy-mode
 # bind-key -N 'Send M-C-z'         M-C-Z send-keys M-C-Z
 bind-key -N 'Enter copy mode' -n M-Z   copy-mode
@@ -20,12 +20,12 @@ bind-key -N 'Send M-Z'           M-Z   send-keys M-Z
 # and doesn't exit with an error code when it should
 bind-key -N 'Pass tmux buffer to `fish_clipboard_copy`' C-x run-shell -b 'fish -c "tmux show-buffer &| fish_clipboard_copy || true"'
 
-# Ms modifies OSC 52 clipboard handling to work with mosh, see
-# https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
-# Should be unnecessary in the next release of tmux
-# after 3.3a (https://github.com/tmux/tmux/issues/3192)
-set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7,xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
-set -as terminal-features ",gnome*:RGB,xterm-kitty:RGB,alacritty:RGB,xterm-256color:RGB"
+# # Ms modifies OSC 52 clipboard handling to work with mosh, see
+# # https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
+# # Should be unnecessary in the next release of tmux
+# # after 3.3a (https://github.com/tmux/tmux/issues/3192)
+# set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7,xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
+set -as terminal-features ",gnome*:RGB,xterm-kitty:RGB:hyperlinks,alacritty:RGB:hyperlinks,xterm-256color:RGB"
 
 # https://emacs.stackexchange.com/questions/39042
 # https://github.com/tmux/tmux/issues/131
