kitty: prevent kitty taking over the Mac OS menubar
Especially bad if kakoune is running in tmux in kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -68,6 +68,7 @@ wayland_titlebar_color background
 # both, left, or right
 macos_option_as_alt both
 macos_quit_when_last_window_closed yes
+macos_menubar_title_max_length 50
 # Do not ask for confirmation on close
 confirm_os_window_close 0
 
