--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -143,7 +143,7 @@ program = "vimtabdiff.py"
 edit-args = ["--vim", '''nvim -c "colorscheme murphy"''', "$left", "$right"]
 
 [merge-tools.vimtabdiff-gvim]
-program = "vimtabdiff"
+program = "vimtabdiff.py"
 edit-args = [
     "--vim",
     '''gvim --nofork -c "colorscheme murphy"''',
