--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,10 +11,10 @@ bind-key C-z send-prefix
 bind-key C-b suspend-client # Formerly C-z
 
 bind-key -n C-b send-keys C-b \; display-message -d 100 "Prefix changed to C-z." 
-# bind-key -N 'Enter copy mode' -n M-C-Z copy-mode
-# bind-key -N 'Send M-C-z'         M-C-Z send-keys M-C-Z
-bind-key -N 'Enter copy mode' -n M-Z   copy-mode
-bind-key -N 'Send M-Z'           M-Z   send-keys M-Z
+# bind-key -N 'Enter copy mode' -n M-C-z copy-mode
+# bind-key -N 'Send M-C-z'         M-C-z send-keys M-C-z
+bind-key -N 'Enter copy mode' -n M-z   copy-mode
+bind-key -N 'Send M-z'           M-z   send-keys M-z
 
 # fish_clipboard_copy exits with non-0 error code in weird cases
 # and doesn't exit with an error code when it should
@@ -76,7 +76,7 @@ bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 
 # bind-key -g ? list-keys -Na # Use :lsk instead?
 
 bind-key M set mouse \; display-message 'Mouse #{?mouse,on,off}'
-bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
+bind-key C-r source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
 
 # Make search incremental, copied form Emacs-mode bindings
 bind-key    -T copy-mode-vi ?  command-prompt -i -I "#{pane_search_string}" -T search -p "(search up)" { send-keys -X search-backward-incremental "%%" }
