tmux.conf: select previous/next output, more or less working

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -83,9 +83,14 @@ bind-key    -T copy-mode-vi ?  command-prompt -i -I "#{pane_search_string}" -T s
 bind-key    -T copy-mode-vi /  command-prompt -i -I "#{pane_search_string}" -T search -p "(search down)" { send-keys -X search-forward-incremental "%%" }
 
 bind-key -T copy-mode-vi [ send-keys -X previous-prompt
-bind-key -T copy-mode-vi M-[ send-keys -X previous-prompt -o
 bind-key -T copy-mode-vi ] send-keys -X next-prompt
-bind-key -T copy-mode-vi M-] send-keys -X next-prompt -o
+bind-key -T copy-mode-vi M-\{ send-keys -X previous-prompt -o
+bind-key -T copy-mode-vi M-\} send-keys -X next-prompt -o
+
+# The `o` command is very useful when combined with this
+bind-key -N "Select previous command output" -T copy-mode-vi M-[  { send-keys -X clear-selection; send-keys -X previous-prompt; send-keys -X previous-prompt -o;send-keys -X begin-selection; send-keys -X next-prompt ; send-keys -X cursor-left }
+bind-key -N "Select next command output" -T copy-mode-vi M-] { send-keys -X clear-selection; send-keys -X next-prompt -o; send-keys -X begin-selection; send-keys -X next-prompt ; send-keys -X cursor-left }
+bind-key -N "Select last command output" M-[ { copy-mode; send-keys -K M-[ }
 
 
 bind-key -n DoubleClick3Pane select-pane\; resize-pane -Z
