--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -79,8 +79,10 @@ bind-key M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-r source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
 
 # Make search incremental, copied form Emacs-mode bindings
-bind-key    -T copy-mode-vi ?  command-prompt -i -I "#{pane_search_string}" -T search -p "(search up)" { send-keys -X search-backward-incremental "%%" }
-bind-key    -T copy-mode-vi /  command-prompt -i -I "#{pane_search_string}" -T search -p "(search down)" { send-keys -X search-forward-incremental "%%" }
+bind-key    -T copy-mode-vi ?  command-prompt -i -I "#{pane_search_string}" -T search -p "(text search up)" { send-keys -X search-backward-incremental "%%" }
+bind-key    -T copy-mode-vi /  command-prompt -i -I "#{pane_search_string}" -T search -p "(text search down)" { send-keys -X search-forward-incremental "%%" }
+bind-key    -T copy-mode-vi M-/                      command-prompt -T search -p "(regex search down)" { send-keys -X search-forward "%%" }
+bind-key    -T copy-mode-vi M-?                      command-prompt -I "^(󰈺|🐟|🐠|\\$)" -T search -p "(regex search up)" { send-keys -X search-backward "%%" }
 
 bind-key -T copy-mode-vi [ send-keys -X previous-prompt
 bind-key -T copy-mode-vi ] send-keys -X next-prompt
