--- a/.config/kitty/gruvbox-material-dark.conf
+++ b/.config/kitty/gruvbox-material-dark.conf
@@ -28,6 +28,11 @@ active_tab_font_style bold
 inactive_tab_foreground #a89984
 inactive_tab_font_style normal
 
+# I'm not currently using these colors (see below for the ones I use), but see also
+# https://github.com/MayushKumar/base16-gruvbox-material-scheme
+# https://github.com/kdrag0n/base16-kitty/blob/master/colors/base16-gruvbox-material-dark-medium.conf
+# https://github.com/kdrag0n/base16-kitty/blob/master/colors/base16-gruvbox-material-dark-mediumdr-256.conf
+
 # Black
 color0 #665c54
 color8 #928374
