--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,14 +15,25 @@
 
 # Might need Fira Code Regular on Linux
 font_family Fira Code
+# font_family Roboto Mono
+font_family JetBrains Mono
+# bold_font family="Roboto Mono" style=Regular variable=700
+# font_family Menlo
 # bold_font Fira Code Bold
 font_size 14
 
 # https://github.com/kovidgoyal/kitty/issues/7525
 symbol_map U+2010-U+2011 Monospace
+# https://en.wikipedia.org/wiki/Miscellaneous_Technical
+# I'm mostly interested in the last row. But also, it doesn't work
+# symbol_map U+2300-U+23FF Symbols Nerd Font Mono
 
 # cursor, never, always
 disable_ligatures always
+
+# Does this need a Windows/Linux analogue?
+map cmd+w no_op
+map cmd+q no_op
 
 # The default ctrl+shift can't be passed to shell programs
 # anyway. Can try it, see if conflicts with something,
@@ -51,6 +62,7 @@ map kitty_mod+h kitten hints --type regex --regex '\b([k-z]{5,}|[K-Z]{5,}|[0-9a-
 # These shortcuts deal with kitty windows
 # by default, I plan on using tmux instead.
 map kitty_mod+f  toggle_fullscreen
+map kitty_mod+1  detach_window ask
 map kitty_mod+2  edit_config_file
 map kitty_mod+5  load_config_file
 map kitty_mod+6  debug_config
@@ -82,6 +94,11 @@ confirm_os_window_close 0
 # "***", "~-", "-~", "~@", "/=", "/==", ]
 
 include kitty.site.conf
+
+# Some resources for theme generation:
+# https://github.com/ciembor/4bit, terminal.sexy,
+# https://github.com/kdrag0n/base16-kitty/
+# https://github.com/gnachman/iTerm2/blob/master/tests/colors.sh
 
 # Different black & background colors for default theme
 # so that tmux can distinguish inactive panes
