--- a/.config/nix/nix.conf
+++ b/.config/nix/nix.conf
@@ -2,6 +2,7 @@ extra-experimental-features = nix-command flakes
 # Only affects the outermost bash and doesn't work
 # with nix-your-shell & fish
 # TODO: Replace with proper prompt hook
-bash-prompt-prefix = ❄
+# Also set by determinate nix
+# bash-prompt-prefix = ❄
 max-jobs = auto
 # sandbox = true  # nixpkgs require this
