--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,8 +3,23 @@ set -g mouse on
 set -g set-clipboard on
 set -g focus-events on
 set -g mode-keys vi
+# Emacs might be better below
 set -g status-keys vi
 set -g history-limit 50000
+set -g destroy-unattached keep-last
+
+# Do not mark an inactive pane where a bell
+# happened with inverted color in the statusline
+set -g monitor-bell off
+# Replace audio bells with video
+set -g visual-bell on
+
+# Enable proxy icons in Terminal.app
+# https://github.com/tmux/tmux/issues/3127#issuecomment-1076300455
+set -g set-titles on
+set -as terminal-features ",gnome*:RGB,xterm-kitty:RGB:hyperlinks"
+set -as terminal-features ",xterm-ghostty:RGB:hyperlinks:osc7"
+set -as terminal-features ",alacritty:RGB:hyperlinks,xterm-256color:RGB,osc7"
 
 set-option -g prefix C-z
 bind-key C-z send-prefix
@@ -25,7 +40,7 @@ bind-key -N 'Pass tmux buffer to `fish_clipboard_copy`' C-x run-shell -b 'fish -
 # # Should be unnecessary in the next release of tmux
 # # after 3.3a (https://github.com/tmux/tmux/issues/3192)
 # set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7,xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
-set -as terminal-features ",gnome*:RGB,xterm-kitty:RGB:hyperlinks,alacritty:RGB:hyperlinks,xterm-256color:RGB"
+# set -as terminal-features ",gnome*:RGB,xterm-kitty:RGB:hyperlinks,xterm-ghostty:RGB:hyperlinks:osc7,alacritty:RGB:hyperlinks,xterm-256color:RGB,osc7"
 
 # https://emacs.stackexchange.com/questions/39042
 # https://github.com/tmux/tmux/issues/131
@@ -90,9 +105,12 @@ bind-key -T copy-mode-vi M-\{ send-keys -X previous-prompt -o
 bind-key -T copy-mode-vi M-\} send-keys -X next-prompt -o
 
 # The `o` command is very useful when combined with this
-bind-key -N "Select previous command output" -T copy-mode-vi M-[  { send-keys -X clear-selection; send-keys -X previous-prompt; send-keys -X previous-prompt -o;send-keys -X begin-selection; send-keys -X next-prompt ; send-keys -X cursor-left }
+bind-key -N "Select previous command output" -T copy-mode-vi M-[  { send-keys -X clear-selection; send-keys -X previous-prompt; send-keys -X previous-prompt -o;send-keys -X begin-selection; send-keys -X next-prompt ; send-keys -X cursor-left ; send-keys -K o; send-keys -K o}
 bind-key -N "Select next command output" -T copy-mode-vi M-] { send-keys -X clear-selection; send-keys -X next-prompt -o; send-keys -X begin-selection; send-keys -X next-prompt ; send-keys -X cursor-left }
 bind-key -N "Select last command output" M-[ { copy-mode; send-keys -K M-[ }
+
+# Doesn't seem to work, results in weird things that might be a bug
+# bind-key -T copy-mode-vi M-DoubleClick1Pane { send-keys -X clear-selection; send-keys -X previous-prompt -o; send-keys -X begin-selection; send-keys -X next-prompt ; send-keys -X cursor-left }
 
 
 bind-key -n DoubleClick3Pane select-pane\; resize-pane -Z
@@ -114,6 +132,8 @@ bind -N 'New window'         c   new-window   -c '#{pane_current_path}'
 bind -N 'New window in ~'    C-c new-window
 bind -N 'Split vertically'   '"' split-window -c '#{pane_current_path}'
 bind -N 'Split horizontally' '%' split-window -h -c '#{pane_current_path}'
+bind -N "Split vertically full-height" 'M-"' split-pane -f -c '#{pane_current_path}'
+bind -N "Split horizontally full-width" 'M-%' split-pane -f -v -c '#{pane_current_path}'
 bind -N 'Select the previously current window' Tab last-window
 # Make it possible to select a pane with Ctrl+Click
 
