kitty: use slightly adjusted Ghostty default theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -84,6 +84,8 @@ macos_menubar_title_max_length 50
 # Do not ask for confirmation on close
 confirm_os_window_close 0
 
+window_padding_width 0 1
+
 # If I wanted to have ligatures, here are the ones I'd
 # want to disable.
 # [".=", ".-", "===", "!==", "=/=", "->>", ">->", "<=<", "<<=",
@@ -107,3 +109,4 @@ include nord.conf
 # Alacritty default theme (more or less)
 include Tomorrow_Night.conf
 include gruvbox-material-dark.conf
+include GhosttyDefault.conf
