Misc abbr, ripgrep

--- a/.config/ripgrep.conf
+++ b/.config/ripgrep.conf
@@ -8,4 +8,5 @@
 --smart-case
 --engine=auto
 
---hyperlink-format=default
+# `--vimgrep` or `--hyperlink-format vscode/macvim` is often more useful
+# --hyperlink-format=default
